improve swagger doku
